🐛 Fix parallax on Safari

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -7,10 +7,6 @@
 
 .hero {
   height: 100vh;
-  overflow: hidden;
-  position: relative;
-  display: grid;
-  place-items: center;
 }
 
 .background {
